fix mobile landing page and nav bar wrapping

--- a/styles.css
+++ b/styles.css
@@ -495,7 +495,9 @@ padding-bottom: 50px;
     /* Header and Nav Bar */
 
     header {
+        display: flex;
         background-color: #056674;
+        padding: 10px;
     }
 
     nav {
@@ -507,9 +509,7 @@ padding-bottom: 50px;
         align-self: flex-start;
         height: 50px;
         width: 50px;
-        margin-top: 5px;
-        margin-left: 5px;
-        margin-bottom: 5px;
+        margin: auto;
     }
 
     nav ul {
@@ -522,7 +522,7 @@ padding-bottom: 50px;
     }
 
     nav ul li a {
-        font-size: 20px;
+        font-size: 120%;
         font-family: 'Norwester', sans-serif;
         color: #E0ECE4;
         margin: 5px;
@@ -535,16 +535,20 @@ padding-bottom: 50px;
     main {
         display: flex;
         flex-direction: column;
+        align-items: center;
+        margin-top: 30px;
+        margin-bottom: 50px;
         
     }
 
     main h1 {
      margin-left: 30px;
-     font-size: 50px;
+     font-size: 400%;
      font-family: 'Kollektif', Arial, sans-serif;
      color: #E0ECE4;
      text-shadow: 2px 2px #FF4B5C;
-     margin-top: 30px;
+     margin-bottom: 10px;
+     
     }
 
     main p {
@@ -558,7 +562,7 @@ padding-bottom: 50px;
     .portrait {
         max-width: 480px;
         width: 50%;
-        margin: 20px auto 30px auto;
+        margin: auto;
         padding: 5px;
         filter: drop-shadow(5px 5px 8px #056674);
         display: relative;
@@ -572,10 +576,12 @@ padding-bottom: 50px;
         background-color: #FF4B5C;
         border: 1px solid #056674;
         border-radius: 5px;
-        margin: 30px auto 50px auto;
+        margin-left: 35%;
         font-family: 'Norwester', Arial, sans-serif;
         color: #E0ECE4;
         font-size: 150%;
+        margin-top: 20px;
+
     }
 
     
